--- a/artificial_intelligence/covid19_prognosis_prediction_service/requirements.txt
+++ b/artificial_intelligence/covid19_prognosis_prediction_service/requirements.txt
@@ -1,14 +1,8 @@
-install python on your local machine
-open a new terminal on your ide and run the following commands under the covid19_prognosis_service directory
-cd artificial_intelligence/covid19_prognosis_prediction_service
-py -m pip install flask
-py -m pip install flask_cors
-py -m pip install gunicorn
-py -m pip install matplotlib
-py -m pip install seaborn
-py -m pip install pandas
-py -m pip install numpy
-py -m pip install scikit_learn
-
-to run the app use the ffg command:
-py app.py
+flask==2.0.1
+flask_cors==3.0.10
+gunicorn==20.1.0
+matplotlib==3.4.3
+seaborn==0.11.2
+pandas==1.3.3
+numpy==1.21.2
+scikit_learn==0.24.2
